<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/reset_clr"
        android:text="@string/reset_btn_txt"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <Button
        android:id="@+id/chng_name_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/reset_clr"
        android:onClick="showAlertDialog"
        android:text="@string/change_names_btn_txt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/player1_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/plr1_clr"
            android:text="@string/player_1_score"
            android:textSize="36sp" />

        <Button
            android:id="@+id/player2_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/plr2_clr"
            android:text="@string/player_2_score"
            android:textSize="36sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/player1_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/player_1_name"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/player2_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/player_2_name"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />



</androidx.constraintlayout.widget.ConstraintLayout>